# espressif-trainings

./: .gitpod.Dockerfile  .gitpod.yml  Cargo.toml
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/wokwi/: Cargo.toml  Dockerfile  compile.sh  fetch.sh
advanced/button-interrupt/: Cargo.toml  rust-toolchain.toml
advanced/button-interrupt/examples/: solution_led.rs
advanced/button-interrupt/src/: main.rs
advanced/i2c-driver/: Cargo.toml
advanced/i2c-driver/src/: main.rs
advanced/i2c-sensor-reading/: Cargo.toml
book/src/: 03_2_cargo_generate.md
common/lib/esp32-c3-dkc02-bsc/: Cargo.toml
common/lib/esp32-c3-dkc02-bsc/.cargo/: config.toml
common/lib/esp32-c3-dkc02-bsc/src/: led.rs  temp_sensor.rs  wifi.rs
common/lib/esp32-s3-dkc02-bsc/: Cargo.toml
common/lib/esp32-s3-dkc02-bsc/src/: led.rs  wifi.rs
common/lib/get-uuid/: Cargo.toml
common/lib/rgb-led/: Cargo.toml
common/lib/wifi/: Cargo.toml
intro/hardware-check/: Cargo.toml  diagram.json  wokwi.toml
intro/hardware-check/.cargo/: config.toml
intro/hardware-check/src/: main.rs
intro/http-client/: Cargo.toml  wokwi.toml
intro/http-client/examples/: http_client.rs  https_client.rs
intro/http-client/src/: main.rs
intro/http-server/: Cargo.toml  wokwi.toml
intro/http-server/.cargo/: config.toml
intro/http-server/examples/: http_server.rs
intro/http-server/src/: main.rs
intro/mqtt/exercise/: Cargo.toml  sdkconfig.defaults
intro/mqtt/exercise/examples/: solution_publ.rs  solution_publ_rcv.rs
intro/mqtt/exercise/src/: main.rs
scripts/: build.sh  flash.sh
