[package]
name = "button-interrupt"
version = "0.1.0"
authors = [
    "Anatol Ulrich <anatol.ulrich@ferrous-systems.com>",
    "Tanks Transfeld <tanks.transfeld@ferrous-systems.com>",
]
edition = "2021"

[features]
default = ["native"]
native = ["esp-idf-sys/native"]

[dependencies]
esp-idf-sys = { version = "=0.31.10", features = ["binstart"] }
anyhow = "1"
esp32-s3-dkc02-bsc = { path = "../../common/lib/esp32-s3-dkc02-bsc" }

[build-dependencies]
embuild = "0.28"
anyhow = "1"
