[package]
name = "i2c-driver"
version = "0.1.0"
authors = ["Tanks Transfeld <tanks.transfeld@ferrous-systems.com>"]
edition = "2021"

[features]
default = ["native"]
native = ["esp-idf-sys/native"]

[dependencies]
esp-idf-sys = { version = "=0.31.10", features = ["binstart"] }
esp-idf-hal = "=0.38"
anyhow = "1"
embedded-hal = "0.2.7"


[build-dependencies]
embuild = "0.28"
anyhow = "1"
