[package]
name = "i2c-sensor-reading"
version = "0.1.0"
authors = ["Tanks Transfeld <tanks.transfeld@ferrous-systems.com>"]
edition = "2021"

[features]
default = ["native"]
native = ["esp-idf-sys/native"]

[dependencies]
esp-idf-sys = { version = "=0.31.10", features = ["binstart"] }
esp-idf-hal = "=0.38"
anyhow = "1"
embedded-hal = "0.2.7"
shtcx = "0.10.0"
lis3dh = "0.4.1"
shared-bus = "0.2.4"
icm42670p = { path = "../../common/lib/icm42670p" }



[build-dependencies]
embuild = "0.28"
anyhow = "1"
