[package]
name = "hardware-check"
version = "0.1.0"
authors = ["Anatol Ulrich <anatol.ulrich@ferrous-systems.com>"]
edition = "2021"

[features]
default = ["native"]
native = ["esp-idf-sys/native"]

[dependencies]
esp-idf-sys = { version = "=0.31.10", features = ["binstart"] }
esp-idf-svc = { version = "=0.42.5", features = ["experimental", "alloc"] }
esp32-s3-dkc02-bsc = { path = "../../common/lib/esp32-s3-dkc02-bsc" }
log = "0.4"
anyhow = "1"
toml-cfg = "0.1"

[build-dependencies]
embuild = "0.28"
anyhow = "1"
